corrigiendo alertas de notificaciones